feat(core): Update report & setting apis
